--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
  </div>
 
 
-<h1>This is a society</h1>
+<h1>Code 1230 Super Mega Cool Website</h1>
 
-<p>paragraph text here<br><br>
+<p>This is the Code 1230 Super Mega Cool Website<br><br>
 this is a new line
 </p>
 
