--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 this is a new line
 </p>
 
-<img src="http://cdn1.buuteeq.com/upload/6202/frink_roatan_2015_460.jpg" alt="image missing!" style="width:25%" />
+<img src="https://i.kym-cdn.com/entries/icons/mobile/000/017/618/pepefroggie.jpg" alt="image missing!" style="width:25%" />
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
