--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  </div>
 
 
-<h1>Code 1230 Super Mega Cool Website</h1>
+<h1>Code 1230 Super Mega Cool Website (Hello World)</h1>
 
 <p>This is the Code 1230 Super Mega Cool Website<br><br>
 this is a new line
