--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@ this is a new line
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
 </footer>
 
+ <p>
+Week 1 - 5 Images
+</p>
+ 
+ 
 </body>
 
 </html>
