--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@ this is a new line
 
 <img src="https://vignette.wikia.nocookie.net/the-arkham-universe/images/3/32/BatmanArkhamKnightGothamCity.jpg/revision/latest?cb=20141001141308" alt="image missing!" style="width:25%" />
  
+<img src="https://vignette.wikia.nocookie.net/the-arkham-universe/images/3/32/BatmanArkhamKnightGothamCity.jpg/revision/latest?cb=20141001141308" alt="image missing!" style="width:25%" />
+
+<img src="https://vignette.wikia.nocookie.net/elderscrolls/images/2/23/Windhelm_Skyrim.png/revision/latest?cb=20141015075047" alt="image missing!" style="width:25%" />
+
+  
  
+
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
 </footer>
