--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ this is a new line
 
 <img src="https://vignette.wikia.nocookie.net/elderscrolls/images/2/23/Windhelm_Skyrim.png/revision/latest?cb=20141015075047" alt="image missing!" style="width:50%" />
 
+<img src="https://vignette.wikia.nocookie.net/florielsand-school-of/images/3/34/Hogwarts_Castle.jpg/revision/latest?cb=20161129214836" alt="image missing!" style="width:50%" />
+
   
  
 
