--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
  <div class="topnav" id="myTopnav">
  <a href="index.html">Home</a>
- <a href="Diagram 1.html">dDiagram 1</a>
-<a href="page2.html">page2</a>
-<a href="page3.html">page3</a>
+ <a href="page1.html">Diagram 1</a>
+<a href="page2.html">Diagram 2</a>
+<a href="page3.html">Diagram 3</a>
 
  </div>
 
