--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
  <a href="page1.html">Diagram 1</a>
 <a href="page2.html">Diagram 2</a>
 <a href="page3.html">Diagram 3</a>
-
+<a href="page4.html">Diagram 4</a>
+<a href="page5.html">Diagram 5</a>
+  
  </div>
 
 
