--- a/page3.html
+++ b/page3.html
@@ -3,23 +3,26 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="style.css"/>
-<title>My first website</title>
+<title>Code - Diagram 3</title>
 </head>
 
 <body>
 
  <div class="topnav" id="myTopnav">
  <a href="index.html">Home</a>
- <a href="page1.html">page1</a>
-<a href="page2.html">page2</a>
-<a href="page3.html">Diagram1</a>
+ <a href="page1.html">Diagram 1</a>
+<a href="page2.html">Diagram 2</a>
+<a href="page3.html">Diagram 3</a>
+<a href="page4.html">Diagram 4</a>
+<a href="page5.html">Diagram 5</a>
+  
  </div>
 
 
-<h1>This is page 3</h1>
+<h1>This is diagram 3</h1>
 
 <p>paragraph text here<br><br>
-this is a new line
+Hi
 </p>
 
 <img src="http://cdn1.buuteeq.com/upload/6202/frink_roatan_2015_460.jpg" alt="image missing!" style="width:25%" />
