--- a/page5.html
+++ b/page5.html
@@ -1,1 +1,37 @@
 
+<!DOCTYPE html>
+<html>
+
+<head>
+<link rel="stylesheet" type="text/css" href="style.css"/>
+<title>Code - Diagram 5</title>
+</head>
+
+<body>
+
+ <div class="topnav" id="myTopnav">
+ <a href="index.html">Home</a>
+ <a href="page1.html">Diagram 1</a>
+<a href="page2.html">Diagram 2</a>
+<a href="page3.html">Diagram 3</a>
+<a href="page4.html">Diagram 4</a>
+<a href="page5.html">Diagram 5</a>
+  
+ </div>
+
+
+<h1>This is diagram 5</h1>
+
+<p>paragraph text here<br><br>
+Hi
+</p>
+
+<img src="http://cdn1.buuteeq.com/upload/6202/frink_roatan_2015_460.jpg" alt="image missing!" style="width:25%" />
+
+<footer> 
+<a href="https://github.com/madeleinejohanson"> your footer text here</a>
+</footer>
+
+</body>
+
+</html>
