--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,7 @@
 Hi
 </p>
 
-<img src="http://cdn1.buuteeq.com/upload/6202/frink_roatan_2015_460.jpg" alt="image missing!" style="width:25%" />
+<img src="https://cdnb.artstation.com/p/assets/images/images/006/807/291/large/james-catterson-batman06.jpg?1501415342" alt="image missing!" style="width:50%" />
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
