--- a/page3.html
+++ b/page3.html
@@ -25,7 +25,7 @@
 Hi
 </p>
 
-<img src="http://cdn1.buuteeq.com/upload/6202/frink_roatan_2015_460.jpg" alt="image missing!" style="width:25%" />
+<img src="https://vignette.wikia.nocookie.net/fallout/images/3/3d/Diamond_City_overview.jpg/revision/latest?cb=20160221001521" alt="image missing!" style="width:25%" />
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
