--- a/page5.html
+++ b/page5.html
@@ -26,7 +26,7 @@
 Hi
 </p>
 
-<img src="http://cdn1.buuteeq.com/upload/6202/frink_roatan_2015_460.jpg" alt="image missing!" style="width:25%" />
+<img src="" alt="image missing!" style="width:50%" />
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
