--- a/page3.html
+++ b/page3.html
@@ -25,7 +25,7 @@
 Hi
 </p>
 
-<img src="https://vignette.wikia.nocookie.net/fallout/images/3/3d/Diamond_City_overview.jpg/revision/latest?cb=20160221001521" alt="image missing!" style="width:50%" />
+<img src="https://imgix.bustle.com/elite-daily/2017/05/08005858/harry-potter-hogwarts-is-real.jpg?w=998&h=598&fit=crop&crop=faces&auto=format&q=70" alt="image missing!" style="width:50%" />
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
