--- a/page5.html
+++ b/page5.html
@@ -26,7 +26,7 @@
 Hi
 </p>
 
-<img src="" alt="image missing!" style="width:50%" />
+<img src="https://epiclacesrpg.weebly.com/uploads/4/2/9/5/42955327/7243154_orig.jpg" alt="image missing!" style="width:50%" />
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
