--- a/page4.html
+++ b/page4.html
@@ -25,7 +25,7 @@
 Hi
 </p>
 
-<img src="https://vignette.wikia.nocookie.net/fallout/images/3/3d/Diamond_City_overview.jpg/revision/latest?cb=20160221001521" alt="image missing!" style="width:50%" />
+<img src="https://i.rutab.net/upload/2015/fallout/maps/zone1/p/MAPZ09_Primary08.jpg" alt="image missing!" style="width:50%" />
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
