--- a/page5.html
+++ b/page5.html
@@ -28,6 +28,8 @@ Hi
 
 <img src="https://epiclacesrpg.weebly.com/uploads/4/2/9/5/42955327/7243154_orig.jpg" alt="image missing!" style="width:50%" />
 
+<img src="https://github.com/TanJimmyTan/Code-1230---JT/blob/master/Screen%20Shot%202018-08-01%20at%201.32.37%20AM.png?raw=true" alt="image missing!" style="width:25%" /> 
+ 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
 </footer>
