--- a/page2.html
+++ b/page2.html
@@ -27,6 +27,8 @@ Hi
 
 <img src="https://cdnb.artstation.com/p/assets/images/images/006/807/291/large/james-catterson-batman06.jpg?1501415342" alt="image missing!" style="width:50%" />
 
+<img src="https://github.com/TanJimmyTan/Code-1230---JT/blob/master/Screen%20Shot%202018-08-01%20at%201.32.47%20AM.png?raw=true" alt="image missing!" style="width:25%" /> 
+ 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
 </footer>
