--- a/page4.html
+++ b/page4.html
@@ -27,6 +27,8 @@ Hi
 
 <img src="https://i.rutab.net/upload/2015/fallout/maps/zone1/p/MAPZ09_Primary08.jpg" alt="image missing!" style="width:50%" />
 
+<img src="https://github.com/TanJimmyTan/Code-1230---JT/blob/master/Screen%20Shot%202018-08-01%20at%201.33.04%20AM.png?raw=true" alt="image missing!" style="width:25%" /> 
+ 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
 </footer>
